--- a/app/src/main/res/layout/activity_informar_cep.xml
+++ b/app/src/main/res/layout/activity_informar_cep.xml
@@ -35,7 +35,19 @@
             android:textSize="22sp"
             android:layout_width="wrap_content"/>
 
+
+
     </LinearLayout>
+    <Button
+        android:background="@color/colorPrimary"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnDeslogar"
+        android:layout_marginBottom="10dp"
+        android:padding="10dp"
+        android:text="deslogar"
+        android:textColor="#FDFDFD"
+        android:textSize="22sp"
+        android:layout_width="wrap_content"/>
 
     <TextView
         android:layout_height="match_parent"
