--- a/app/src/main/res/layout/activity_informar_cep.xml
+++ b/app/src/main/res/layout/activity_informar_cep.xml
@@ -18,13 +18,12 @@
         android:inputType="number"
         android:layout_width="match_parent"/>
 
-    <LinearLayout
+   <!-- <LinearLayout
         android:gravity="center"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_width="match_parent">
-
-        <Button
+        android:layout_width="match_parent">-->
+    <Button
             android:background="@color/colorPrimary"
             android:layout_height="wrap_content"
             android:id="@+id/btnMain_buscarCep"
@@ -33,27 +32,29 @@
             android:text="Buscar CEP"
             android:textColor="#FDFDFD"
             android:textSize="22sp"
-            android:layout_width="wrap_content"/>
+            android:layout_width="wrap_content"
+            android:layout_margin="80px"/>
 
+        <Button
+            android:background="@color/colorPrimary"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnDeslogar"
+            android:layout_marginBottom="20dp"
+            android:padding="10dp"
+            android:text="deslogar"
+            android:textColor="#FDFDFD"
+            android:textSize="22sp"
+            android:layout_width="wrap_content"
+            android:layout_margin="80px"/>
 
-
+        <TextView
+            android:layout_height="match_parent"
+            android:id="@+id/etMain_resposta"
+            android:textColor="#595959"
+            android:textSize="20sp"
+            android:layout_width="match_parent"/>
     </LinearLayout>
-    <Button
-        android:background="@color/colorPrimary"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnDeslogar"
-        android:layout_marginBottom="10dp"
-        android:padding="10dp"
-        android:text="deslogar"
-        android:textColor="#FDFDFD"
-        android:textSize="22sp"
-        android:layout_width="wrap_content"/>
 
-    <TextView
-        android:layout_height="match_parent"
-        android:id="@+id/etMain_resposta"
-        android:textColor="#595959"
-        android:textSize="20sp"
-        android:layout_width="match_parent"/>
 
-</LinearLayout>
+
+<!--</LinearLayout>-->
